# tokenmonster

./: LICENSE  README.md
benchmark/: README.md  llama_test.py  onlyvalidlatin.go  pretrain.md  tiktoken_test.py  tokenmonster_bench.go  tokenmonster_benchmark.go  tokenmonster_test.py
go/: README.md  tokenmonster.go
javascript/: README.md  index.html  tokenmonster.html  tokenmonster.js
php/: tokenmonster.php
python/: README.md  tokenmonster.py
tokenmonster-cpp/: CMakeLists.txt  README.md
tokenmonster-cpp/cmake/: tokenmonster_cppConfig.cmake.in
tokenmonster-cpp/include/tokenmonster/: tokenmonster.hpp
tokenmonster-cpp/src/: tokenmonster.cpp
tokenmonster-cpp/tests/: bench.cpp  dump.cpp  smoke.cpp  unit.cpp
training/: README.md  comparetokens.go  download_code_samples.py  exporttokens.go  exportvocab.go  extract_text_from_jsonl_parquet.py  getalltokens.go  mergetokens.go  tokenmonsterserver.go  trainvocab.go
training/dataset_helpers/: extract_text_from_jsonl_parquet.py
yaml_guide/: README.md  convert_gpt2tokenizer.py  convert_llamatokenizer.py  example.yaml
